--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Fancy calculator</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./style.css'>
-    <script src='./src/javascript/index.js' defer type="text/javascript"></script>
-</head>
-<body>
-    <header>
-
-    </header>
-    <main>
-        <div class="title">
-
-        </div>
-    </main>
-    <footer>
-        <div id="copyright">Jaime Alvarez © 2023</div>
-    </footer>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Fancy calculator</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" media="screen" href="./style.css" />
+        <script src="./src/javascript/index.js" defer type="text/javascript"></script>
+    </head>
+    <body>
+        <header>
+            <div class="left">
+                <img alt="Image of a calculator" src="./images/calculator.png" id="logo" />
+                <span>Add, subtract, multiply & divide</span>
+            </div>
+            <nav class="links">
+                <ul>
+                    <li>
+                        <a href="https://github.com/Jaime-alv/mathRainbowParser" class="link">GitHub</a>
+                    </li>
+                    <li>
+                        <a href="" class="link">LinkedIn</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="title">
+                <h1 class="main">Calculator</h1>
+            </div>
+        </main>
+        <footer>
+            <div id="copyright">Jaime Alvarez © 2023</div>
+        </footer>
+    </body>
 </html>
