Calculator front overlay

--- a/index.html
+++ b/index.html
@@ -29,6 +29,40 @@
             <div class="title">
                 <h1 class="main">Calculator</h1>
             </div>
+            <div class="calc-container">
+                <div class="display"></div>
+                <div class="numbers">
+                    <table class="digits">
+                        <tr>
+                            <td>
+                                <button class="digit">7</button>
+                                <button class="digit">8</button>
+                                <button class="digit">9</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button class="digit">4</button>
+                                <button class="digit">5</button>
+                                <button class="digit">6</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button class="digit">1</button>
+                                <button class="digit">2</button>
+                                <button class="digit">3</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button class="digit double">0</button>
+                                <button class="digit">.</button>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </main>
         <footer>
             <div id="copyright">Jaime Alvarez © 2023</div>
