--- a/index.html
+++ b/index.html
@@ -35,9 +35,18 @@
                     <table class="digits">
                         <tr>
                             <td>
+                                <button class="digit">=</button>
+                                <button class="digit">c</button>
+                                <button class="digit">%</button>
+                                <button class="digit">/</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
                                 <button class="digit">7</button>
                                 <button class="digit">8</button>
                                 <button class="digit">9</button>
+                                <button class="digit">x</button>
                             </td>
                         </tr>
                         <tr>
@@ -45,6 +54,7 @@
                                 <button class="digit">4</button>
                                 <button class="digit">5</button>
                                 <button class="digit">6</button>
+                                <button class="digit">-</button>
                             </td>
                         </tr>
                         <tr>
@@ -52,12 +62,14 @@
                                 <button class="digit">1</button>
                                 <button class="digit">2</button>
                                 <button class="digit">3</button>
+                                <button class="digit">+</button>
                             </td>
                         </tr>
                         <tr>
                             <td>
                                 <button class="digit double">0</button>
                                 <button class="digit">.</button>
+                                <button class="digit">=</button>
                             </td>
                         </tr>
                     </table>
