--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Fancy calculator</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" media="screen" href="./style.css" />
-        <script src="./src/javascript/index.js" defer type="text/javascript"></script>
+        <script src="./build/src/index.js" defer type="text/javascript"></script>
     </head>
     <body>
         <header>
